fixed navbar dimen on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@ timeline {
 
 @media (max-width: 767px) {
   main {
-    padding-top: 7rem;
+    padding-top: 0.5rem;
     margin-left: 1rem;
     margin-right: 1rem;
   }
